--- a/project/template.uvprojx
+++ b/project/template.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>STM32F100, USE_STDPERIPH_DRIVER</Define>
               <Undefine></Undefine>
-              <IncludePath>..\CMSIS;..\User;..\Library\inc;..\User\freq;..\User\uart;..\User\clk;..\User\iic;..\User\sht20;..\User\adc</IncludePath>
+              <IncludePath>..\CMSIS;..\User;..\Library\inc;..\User\freq;..\User\uart;..\User\clk;..\User\iic;..\User\sht20;..\User\adc;..\User</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -579,5 +579,14 @@
     <components/>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>template</LayName>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
